# SI-Exam

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
applications/services/subscription/: .gitignore  Dockerfile  config.toml  docker_entrypoint.sh  init_db.sh  protogen.sh  pyproject.toml  readme.md  requirements.txt
applications/services/subscription/migration/: .gitignore  Dockerfile  config.toml  pyproject.toml  requirements.txt
applications/services/subscription/migration/src/: main.py
applications/services/subscription/src/: server.py
applications/services/subscription/src/connection/: sqlite_connection.py
applications/services/subscription/src/logic/: time.py
applications/services/subscription/src/routes/: customer_routes.py  subscription_routes.py
applications/services/subscription/src/utils/: config.py
applications/services/subscription/tests/: test_subscription.py
applications/services/warehouse/: Cargo.toml  Dockerfile  build.rs  config.toml  flush_and_test.sh  reset_and_test.sh
applications/services/warehouse/migration/: Dockerfile  config.toml  readme.md
applications/services/warehouse/migration/src/: main.py
applications/services/warehouse/migration/tests/: test_migration.py
applications/services/warehouse/migrations/: 20211207181123_store_m2m_vinyl.sql
applications/services/warehouse/proto/: store.proto
applications/services/warehouse/src/: server.rs
applications/services/warehouse/src/entities/: mod.rs  stock_info.rs  store.rs
applications/services/warehouse/src/logic/: mod.rs  store_handler.rs
applications/services/warehouse/src/tests/: grpc_store_test.rs  grpc_store_tests.rs  mod.rs
applications/services/warehouse/src/utils/: config.rs
(+230 files in other folders)
