[tool.poetry]
name = "subscription"
version = "0.1.0"
description = ""
authors = ["= <doublenegative@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
grpcio = "^1.42.0"
grpcio-tools = "^1.42.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
