
[package]
name = "mini_project_1"
version = "0.1.0"
authors = ["= <doublenegative@protonmail.com>"]
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#primary
tonic ="0.6.1"
toml ="0.5.8"
tokio = { version="1.11.0", features = ["macros", "rt-multi-thread"] }
prost ="0.9.0"
sqlx =  {version="0.5.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"]}
rdkafka={version="0.28.0", features= ["tokio","cmake-build"]}

#utils
lazy_static = "1.4.0"
anyhow="1.0.44"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9.0"
regex="1.5.4"

# serde
serde_derive = "1.0.130"
serde = "1.0.130"


[build-dependencies]
tonic-build = "0.6.0"
