[tool.poetry]
name = "migration"
version = "0.1.0"
description = ""
authors = ["apatheticfrog <apathetic_frog@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nose2 = "^0.10.0"
toml = "^0.10.2"
Faker = "^10.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
